<resources>
    <string name="app_name">App</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_favourites">Favourites</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_view_organisation">ViewOrganisation</string>
    <string name="title_activity_view_appointment">ViewAppointment</string>
    <string name="title_activity_view_day">ViewDay</string>
    <string name="dontHaveAccount">Don\'t have an account? Sign Up.</string>
    <string name="signIn">Sign In</string>
    <string name="forgotPassword">Forgot Your Password?</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="mediBook">MediBook</string>
    <string name="resetPassword">Reset Your Password</string>
    <string name="fillOut">Please fill out all fields.</string>
    <string name="dateFormat">YYYY-MM-DD</string>
    <string name="genderFormat">\'Male\' or \'Female\'</string>
    <string name="phoneFormat">E.g. 01234567890</string>
    <string name="postcodeFormat">E.g. AB12CDF</string>
    <string name="emailMatch">Email addresses must match.</string>
    <string name="passwordMatch">Passwords must match.</string>
    <string name="passwordLength">Passwords must be at least 6 characters long.</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="address">Address</string>
    <string name="town">Town</string>
    <string name="county">County</string>
    <string name="postcode">Postcode</string>
    <string name="confirmEmail">Confirm Email Address</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="createYourAccount">Create Your Account</string>
    <string name="createAnAccount">Create an Account</string>
    <string name="calendar">Calendar</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="account">Account</string>
    <string name="viewDay">View Day</string>
    <string name="viewOrganisation">View Organisation</string>
    <string name="viewAppointment">Your Appointment</string>
    <string name="selectTreatment">Select a Treatment</string>
    <string name="selectStaff">Select a Staff Member</string>
    <string name="selectTimeSlot">Select a Time Slot Option</string>
    <string name="selectDate">Select a Date</string>
    <string name="selectTime">Select a Time Slot</string>
    <string name="reviewBooking">Your Booking</string>
    <string name="personalDetails">Your Details</string>
    <string name="availability">Your Availability</string>
    <string name="notifications">Notifications</string>
    <string name="deleteAccount">Delete Your Account</string>
    <string name="upcomingAppointments">Upcoming Appointments</string>
    <string name="recentOrganisations">Recent Organisations</string>
    <string name="organisation">Organisation</string>
    <string name="where">Where</string>
    <string name="when">When</string>
    <string name="who">Who</string>
    <string name="what">What</string>
    <string name="cancelBooking">Cancel Booking</string>
    <string name="book">Book</string>
    <string name="type">Type</string>
    <string name="openingTimes">Opening Times</string>
    <string name="phone">Phone Number</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Proin et ultrices dui. Quisque dignissim neque porttitor molestie laoreet.
        Mauris hendrerit dui libero, ac iaculis velit porta in.
        Suspendisse scelerisque velit a laoreet tincidunt. Quisque a iaculis diam.
        Etiam convallis arcu quis dui iaculis, et cursus sapien euismod. Praesent a dolor</string>
    <string name="next">Next</string>
    <string name="nextAvailable">Next Available Time Slot</string>
    <string name="chooseTimeSlot">Choose a Time Slot</string>
    <string name="confirmBooking">Confirm Booking</string>
    <string name="noPreference">No Preference</string>
    <string name="deleteAccountWarning">Are you sure you want to delete your account? This cannot be undone.</string>
    <string name="title_activity_availability_day">AvailabilityDay</string>
    <string name="busyFrom">Busy From</string>
    <string name="busyTo">Busy To</string>
    <string name="editAvailability">Save Availability</string>
    <string name="title_activity_favourites_search">FavouritesSearch</string>
    <string name="title_activity_calendar_search">CalendarSearch</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="title_activity_view_previous_appointment">ViewPreviousAppointment</string>
    <string name="saveDetails">Save Details</string>
    <string name="google_maps_API_key"></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="noAppointments">You have no upcoming appointments. Visit an organisation\'s page to book with them.</string>
</resources>