<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/phoneDetails"
            android:inputType="number"
            android:textColorHint="@color/black"
            android:paddingVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textSize="18sp"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phoneFormat"
        android:paddingBottom="10dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailDetails"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"
            android:paddingVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="18sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordDetails"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            android:paddingVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="18sp"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordLength"
        android:paddingBottom="10dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/addressDetails"
            android:inputType="text"
            android:textColorHint="@color/black"
            android:paddingVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:textSize="18sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/townDetails"
            android:inputType="text"
            android:textColorHint="@color/black"
            android:paddingVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/town"
            android:textSize="18sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/countyDetails"
            android:inputType="text"
            android:textColorHint="@color/black"
            android:paddingVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/county"
            android:textSize="18sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/postcodeDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/postcode"
            android:inputType="text"
            android:paddingVertical="20dp"
            android:textColorHint="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/postcodeFormat"
            android:paddingBottom="10dp"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>