<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/where"
            android:textColorHint="@color/black"
            android:paddingVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/where"
            android:focusable="false"
            android:textSize="18sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/when"
            android:textColorHint="@color/black"
            android:paddingVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/when"
            android:focusable="false"
            android:textSize="18sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/what"
            android:textColorHint="@color/black"
            android:paddingVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/what"
            android:focusable="false"
            android:textSize="18sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/who"
            android:textColorHint="@color/black"
            android:paddingVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/who"
            android:focusable="false"
            android:textSize="18sp"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>